<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/permit_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_permit_data_view"/>

        <Button
            style="@style/full_report_button_toolbar"
            android:id="@+id/full_report_button_permit_data_view"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/backgroundDefault">

        <TextView
            style="@style/text_view_heading"
            android:id="@+id/permit_holder_name"
            android:text=""/>

        <TableLayout
            style="@style/table_layout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/permit_table">
        </TableLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/permit_grid_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#AA000000"
        android:layout_weight="0.30" />

</LinearLayout>
