...
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="choose_tag">Choose a tag</string>

    <string name="drawer_cde">River Catchment Quality</string>
    <string name="drawer_wims">Water Quality Samples</string>
    <string name="drawer_permit">Pollution Licence Holders</string>
    <string name="drawer_my_area">Where am I now?</string>
    <string name="drawer_info">How it Works</string>

    <string name="marker_wims">WIMS_Point</string>
    <string name="marker_permit">Waste_Point</string>

    <string name="photo_comment">Comment: </string>
    <string name="photo_tag">Tags: </string>
    <string name="photo_date">Date Taken: </string>
    <string name="photo_item_descriptor">Image of Observation</string>

...
