<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:background="#cc4fc3f7"
        android:layout_weight="0.70" >

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_name"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/sp_data1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:text="Loading ratings data..."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/sp_data2"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CC000000"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/dataview_toolbar"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:id="@+id/back_button_sp_data_view"
                android:clickable="true"
                android:scaleType="center"
                android:padding="16dp"
                android:src="@drawable/arrow_white" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:layout_weight="0.30" />

</LinearLayout>
