...
            android:layout_marginRight="16dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:id="@+id/back_button_photo_view"
                android:clickable="true"
                android:scaleType="center"
                android:src="@drawable/arrow_white"
                android:padding="16dp" />

        </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#cc4fc3f7" >

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/placeholder"/>

            <!--<TextView-->
...
