...
    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/info_view_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_info_view"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
            android:paddingStart="@dimen/layout_base_horizontal_padding"
            android:paddingEnd="@dimen/layout_base_horizontal_padding"
            android:orientation="vertical"
            android:background="@color/backgroundDefault" >

            <TextView
                android:id="@+id/info_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_huge"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_title" />
...
